--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,8 @@ on:
   schedule:
     # Run daily at midnight to ensure we catch regressions.
     - cron: "0 0 * * *"
-  # Manual
+  # Allow manual triggering of the workflow.
+  # https://docs.github.com/en/actions/managing-workflow-runs-and-deployments/managing-workflow-runs/manually-running-a-workflow
   workflow_dispatch:
 
 jobs:
@@ -26,15 +27,35 @@ jobs:
           path: "~/.cache/bazel"
           key: bazel-${{ hashFiles('MODULE.bazel', 'WORKSPACE.bazel', '.bazelrc') }}-${{ github.ref_name }}
           restore-keys: |
-            bazel-${{hashFiles('MODULE.bazel', 'WORKSPACE.bazel', '.bazelrc') }}-${{ github.ref_name }}
             bazel-${{hashFiles('MODULE.bazel', 'WORKSPACE.bazel', '.bazelrc') }}
             bazel-
 
+      - name: Save start time
+        uses: josStorer/get-current-time@v2
+        id: start-time
+        with:
+          # Unix timestamp -- seconds since 1970.
+          format: X
 
       - name: Build
         run: bazel build --test_output=errors //...
       - name: Test
         run: bazel test --test_output=errors //...
+
+      - name: Save end time
+        uses: josStorer/get-current-time@v2
+        id: end-time
+        with:
+          # Unix timestamp -- seconds since 1970.
+          format: X
+
+      - name: Calculate build duration
+        run: |
+          START=${{ steps.start-time.outputs.formattedTime }}
+          END=${{ steps.end-time.outputs.formattedTime }}
+          DURATION=$(( $END - $START ))
+          echo "duration=$DURATION" | tee "$GITHUB_ENV"
+
 
       - name: Compress cache
         run: rm -rf $(bazel info repository_cache)
