--- a/.bazelrc
+++ b/.bazelrc
@@ -1,3 +1,17 @@
 # Use C++ 20.
 build --cxxopt=-std=c++20
 build --host_cxxopt=-std=c++20
+
+# Force the use of Clang for all builds. FuzzTest relies on Clang for sanitizer
+# coverage (https://clang.llvm.org/docs/SanitizerCoverage.html).
+build --action_env=CC=clang
+build --action_env=CXX=clang++
+
+# Show everything when running tests.
+test --test_output=streamed
+
+# To create this file, please run:
+#
+#  bazel run @com_google_fuzztest//bazel:setup_configs > fuzztest.bazelrc
+#
+try-import %workspace%/fuzztest.bazelrc
