--- a/netkat/BUILD.bazel
+++ b/netkat/BUILD.bazel
@@ -22,6 +22,8 @@ cc_test(
     deps = [
         ":netkat_cc_proto",
         "@com_google_absl//absl/log",
-        "@com_google_googletest//:gtest_main",
+        "@com_google_fuzztest//fuzztest",
+        "@com_google_fuzztest//fuzztest:fuzztest_gtest_main",
+        "@com_google_googletest//:gtest",
     ],
 )
